--- a/src/styles/colors/color.scss
+++ b/src/styles/colors/color.scss
@@ -36,6 +36,9 @@ $btn-bg-default: #F88C2A;
 $btn-bg-hover: #FFAB2E;
 $btn-focusRing-default: #663399;
 
+// Background color
+$bg-default: #F88C2A;
+
 // Text
 $text-default: #222224;
 $text-body: #3A3A3D;
@@ -53,4 +56,12 @@ $inactivate-shade-default: rgba(58, 58, 61, 0.3);
 
 .text-highlight {
     color: $text-highlight;
+}
+
+.text-light {
+    color: $text-light;
+}
+
+.bg-theme-default {
+    background-color: $bg-default;
 }
