--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -28,7 +28,7 @@ ul.dashed>li:before {
 }
 
 footer .footer-upper #email-subscribe-form .input-group {
-    margin: 15px 0;
+    // margin: 15px 0;
     padding: 4px;
     box-shadow: 0px 0px 15px 4px #e9ecef;
     font-size: 14px;
