added icon, and replace footer bottom

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -96,10 +96,10 @@ footer .padding-bot-15 {
     max-width: 200px;
 }
 
-.social-media-icons {
-    width: 100%;
-    max-width: 260px;
-}
+// .social-media-icons {
+//     width: 100%;
+//     max-width: 260px;
+// }
 
 .bottom-bar {
     margin: 0;
