fixed footer links color and background

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -51,9 +51,9 @@ footer .footer-upper #email-subscribe-form .input-group .email-input {
     flex-grow: 1;
 }
 
-footer .footer-lower {
-    padding: 40px 60px;
-}
+// footer .footer-lower {
+//     padding: 40px 60px;
+// }
 
 .section-header {
     font-weight: 700;
