--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,3 +1,24 @@
+@import "../../styles/colors/color.scss";
+
+.footer-container {
+    padding: 0;
+    background-image: linear-gradient(0deg, rgba(102, 50, 154, 0), rgba(37, 18, 56, 0)), url("/images/img_video_bg.png");
+    background-position: center;
+    background-size: cover;
+
+
+    &__link-container {
+        padding: 3.5rem 0;
+
+        &__break {
+            margin: 3.5rem 0;
+            border: 1px solid $text-highlight;
+
+        }
+    }
+}
+
+
 .icon-row {
     &__icon {
         width: 32px;
