resturctured folders, adding custom button

--- a/src/styles/fonts/font.scss
+++ b/src/styles/fonts/font.scss
@@ -95,8 +95,6 @@ small {
     color: $text-placeholder;
 }
 
-
-
 .body-paragraphs {
     font-family: $bodyFont;
     font-style: normal;
@@ -125,7 +123,7 @@ small {
 }
 
 .button-text {
-    font-family: $headerFont-regular;
+    font-family: $headerFont-bold;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
