--- a/src/pages/1-homepage/a-trailer/a-trailer.scss
+++ b/src/pages/1-homepage/a-trailer/a-trailer.scss
@@ -1,5 +1,16 @@
 #trailer {
-    background-image: url("./img/happyGroup.jpg");
+    // background-image: url("./img/happyGroup.jpg");
+    background-image: linear-gradient(0deg, rgba(102, 50, 154, 0.4), rgba(37, 18, 56, 0.6)), url("./img/happyGroup.jpg");
     background-position: center;
     background-size: cover;
+
+    padding: 5.3rem 2.6rem;
+
+    h2 {
+        margin-bottom: 16px;
+    }
+
+    p {
+        margin-bottom: 32px;
+    }
 }
