--- a/src/pages/5c-aboutUs/aboutUs.scss
+++ b/src/pages/5c-aboutUs/aboutUs.scss
@@ -1,9 +1,13 @@
-// .card-columns {
-//     @include media-breakpoint-only(md) {
-//         column-count: 2;
-//     }
+.card {
+    background-color: transparent;
+    border: 0;
 
-//     @include media-breakpoint-only(lg) {
-//         column-count: 3;
-//     }
-// }
+    &__body {
+        padding-left: 4px;
+        margin: 1.33rem 0;
+    }
+
+    &__footer {
+        padding-left: 4px;
+    }
+}
