--- a/src/pages/3a Incorporation/style.scss
+++ b/src/pages/3a Incorporation/style.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables";
+
 button {
     &.active {
         background: darkblue;
@@ -8,5 +10,11 @@ button {
             color: darkblue;
             border: 1px solid darkblue;
         }
+    }
+}
+
+h1{
+    @include media-breakpoint-down(sm) {
+        font-size: 2.5rem;
     }
 }
