--- a/src/pages/1-homepage/a-trailer/a-trailer.scss
+++ b/src/pages/1-homepage/a-trailer/a-trailer.scss
@@ -1,3 +1,13 @@
+.modal-content {
+    background-color: transparent;
+    border: 0;
+
+    .modal-body {
+        display: flex;
+        justify-content: center;
+    }
+}
+
 #trailer {
     // background-image: url("./img/happyGroup.jpg");
     background-image: linear-gradient(0deg, rgba(102, 50, 154, 0.4), rgba(37, 18, 56, 0.6)), url("./img/happyGroup.jpg");
