incorporation services added

--- a/src/pages/3a-companyIncorporation/companyIncorporation.scss
+++ b/src/pages/3a-companyIncorporation/companyIncorporation.scss
@@ -49,3 +49,14 @@
         }
     }
 }
+
+
+.icon-text-container {
+    display: flex;
+    align-items: center;
+
+    &>span {
+        margin-left: .5rem;
+        font-weight: 700;
+    }
+}
