--- a/src/components/Organisms/Footer/footer.scss
+++ b/src/components/Organisms/Footer/footer.scss
@@ -2,7 +2,7 @@
 
 .footer-container {
     padding: 0;
-    background-image: linear-gradient(0deg, rgba(102, 50, 154, 0), rgba(37, 18, 56, 0)), url("/images/img_video_bg.png");
+    background-image: linear-gradient(0deg, rgba(39, 13, 65, 0.9), rgba(63, 29, 97, 0.7)), url("/images/banner/focus.jpg");
     background-position: center;
     background-size: cover;
 
