fix nav sizing and nav link color, refactored CustomLink

--- a/src/components/Organisms/Header/header.scss
+++ b/src/components/Organisms/Header/header.scss
@@ -1,10 +1,13 @@
-.navagate {
-    background-color: #000000;
+.dark-bg-nav {
+    background-color: #663399;
 }
 
+.navagate {
+    padding: 1.5rem 1rem;
+}
 
 .navbar-toggler {
-    background-color: #F88C2A;
+    background-color: #f88c2a;
 }
 
 .navbar-nav {
