--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -28,7 +28,7 @@ h1 {
     font-family: $headerFont-regular;
     font-weight: 900;
     font-style: normal;
-    font-size: 72px;
+    font-size: 4rem;
     line-height: normal;
     letter-spacing: 0.01em;
     color: $text-default;
