--- a/src/components/Atoms/CustomButton/customButton.scss
+++ b/src/components/Atoms/CustomButton/customButton.scss
@@ -1,8 +1,8 @@
 .custom-button {
     border-radius: 4px;
     // width: fit-content;
-    // padding: 1.3rem 2.7rem;
-    padding: 24px 48px;
+    padding: 1rem 2rem;
+    // padding: 24px 48px;
 }
 
 .primitive {
