--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,15 +1,29 @@
 button {
     &.btn {
         &-default {
-            color: $brand-primary; 
+            color: $brand-primary;
             background: transparent;
-            border-color: $brand-primary; 
+            border-color: $brand-primary;
             border-radius: 0;
-            
             &:hover {
                 color: #fff;
                 background: $brand-primary;
             }
+        }
+        &--stripe {
+            position: relative;
+            border-radius: 4px;
+            background-color: #3ea8e5;
+            background-image: linear-gradient(-180deg, #44b1e8, #3098de);
+            box-shadow: 0 1px 0 0 rgba(46, 86, 153, .15), inset 0 1px 0 0 rgba(46, 86, 153, .1), inset 0 -1px 0 0 rgba(46, 86, 153, .4);
+            font-size: 17px;
+            line-height: 21px;
+            height: 37px;
+            font-weight: 700;
+            text-shadow: 0 -1px 0 rgba(0, 0, 0, .12);
+            color: #fff;
+            cursor: pointer;
+            transition: all .2s ease-in-out;
         }
     }
 }
