--- a/src/components/Organisms/Footer/footer.scss
+++ b/src/components/Organisms/Footer/footer.scss
@@ -1,23 +1,21 @@
 @import "src/styles/color";
-
+@import "src/styles/variables";
 .footer-container {
     padding: 0;
     background-image: linear-gradient(0deg, rgba(39, 13, 65, 0.9), rgba(63, 29, 97, 0.7)), url("/images/banner/focus.jpg");
     background-position: center;
     background-size: cover;
-
-
     &__link-container {
         padding: 3.5rem 0;
-
         &__break {
             margin: 3.5rem 0;
             border: 1px solid $text-highlight;
-
+        }
+        @include media-breakpoint-down(sm) {
+            padding: 3.5rem 1rem;
         }
     }
 }
-
 
 .icon-row {
     &__icon {
