--- a/src/components/Organisms/Header/header.scss
+++ b/src/components/Organisms/Header/header.scss
@@ -1,3 +1,4 @@
+@import 'src/styles/variables';
 .dark-bg-nav {
     background-color: #663399;
 }
@@ -8,6 +9,13 @@
         padding: .7rem 1rem;
         .navbar-brand {
             img {
+                height: 40px;
+            }
+        }
+    }
+    .navbar-brand {
+        img {
+            @include media-breakpoint-down(sm) {
                 height: 40px;
             }
         }
