--- a/src/pages/1-homepage/b-findBusiness/b-findBusiness.scss
+++ b/src/pages/1-homepage/b-findBusiness/b-findBusiness.scss
@@ -1,9 +1,8 @@
 .card-deck {
     .itemCol {
         margin: 0;
-
         border: 0;
-
+        // display: inline;
 
         .itemCol__body {
             margin: 2rem 0;
