conference room booking styling fix

--- a/src/pages/3d-conferenceRoomBooking/conferenceRoomBooking.scss
+++ b/src/pages/3d-conferenceRoomBooking/conferenceRoomBooking.scss
@@ -1,6 +1,18 @@
+.card-body {
+
+    .price-card-header {
+        margin: 0;
+    }
+
+}
+
 .card-footer {
     // background-color:
+    text-align: center;
+    background-color: #C4C4C4;
 }
+
+
 
 .gallery-grid {
     width: 100%;
